; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_odm_EdcaTurboCheck.c_odm_EdcaTurboCheck.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_odm_EdcaTurboCheck.c_odm_EdcaTurboCheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ODM_COMP_EDCA_TURBO = common dso_local global i32 0, align 4
@ODM_DBG_LOUD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"odm_EdcaTurboCheck ========================>\0A\00", align 1
@ODM_MAC_EDCA_TURBO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [45 x i8] c"<========================odm_EdcaTurboCheck\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @odm_EdcaTurboCheck(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = load i32, i32* @ODM_COMP_EDCA_TURBO, align 4
  %8 = load i32, i32* @ODM_DBG_LOUD, align 4
  %9 = call i32 @ODM_RT_TRACE(%struct.TYPE_4__* %6, i32 %7, i32 %8, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @ODM_MAC_EDCA_TURBO, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  br label %24

17:                                               ; preds = %1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = call i32 @odm_EdcaTurboCheckCE(%struct.TYPE_4__* %18)
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = load i32, i32* @ODM_COMP_EDCA_TURBO, align 4
  %22 = load i32, i32* @ODM_DBG_LOUD, align 4
  %23 = call i32 @ODM_RT_TRACE(%struct.TYPE_4__* %20, i32 %21, i32 %22, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @ODM_RT_TRACE(%struct.TYPE_4__*, i32, i32, i8*) #1

declare dso_local i32 @odm_EdcaTurboCheckCE(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
